<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PackPack</string>
    <string name="hello_world">PackPack!!!</string>
    <string name="user_name">Email:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="emailHint">abc@g.com</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_gallery">Gallery</string>

    <string name="gallery_action">Gallery</string>
    
    <string-array name="nav_item_titles">
        <item>Home</item>
        <item>My Packs</item>
        <item>My Groups</item>
        <item>My Account</item>
        <item>Settings</item>
    </string-array>
    
    <array name="nav_item_icons">
        <item>@drawable/ic_home</item>
        <item>@drawable/ic_photos</item>
        <item>@drawable/ic_communities</item>
        <item>@drawable/ic_pages</item>
        <item>@drawable/ic_people</item>
    </array>
</resources>
