<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" 
    android:gravity="center"
    android:id="@+id/loginPage"
    android:layout_margin="10dp">
    
    <TableRow android:layout_margin="5dp"
        android:minHeight="30dp"
        android:gravity="center_horizontal">
        <TextView android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/user_name"
	        android:paddingTop="4dp"
	        android:paddingBottom="4dp"
	        android:id="@+id/unameLabel"
	        android:textStyle="italic|bold"
	        android:gravity="center"/>
    </TableRow>

    <TableRow android:layout_margin="5dp"
        android:minHeight="30dp"
        android:gravity="center_horizontal">
	    <EditText android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:singleLine="true"
	        android:id="@+id/username"
	        android:hint="@string/emailHint"
	        android:inputType="textWebEmailAddress"
	        android:width="200dp"
	        android:paddingTop="2dp"
	        android:paddingBottom="2dp"
	        android:background="@drawable/rounded_edittext"
	        android:gravity="center"/>
    </TableRow>
    
    <TableRow android:layout_margin="5dp"
        android:minHeight="30dp"
        android:gravity="center_horizontal">
        <TextView android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:text="@string/password"
	        android:id="@+id/pwdLabel"
	        android:paddingTop="4dp"
	        android:paddingBottom="4dp"
	        android:textStyle="italic|bold"
	        android:gravity="center"/>
    </TableRow>
    
    <TableRow android:layout_margin="5dp"
        android:minHeight="30dp"
        android:gravity="center_horizontal">
	    <EditText android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:singleLine="true"
	        android:id="@+id/password"
	        android:inputType="textPassword"
	        android:width="200dp"
	        android:paddingTop="2dp"
	        android:paddingBottom="2dp"
	        android:background="@drawable/rounded_edittext"
	        android:gravity="center"/>
    </TableRow>
    
    <TableRow android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp"
        android:layout_gravity="center_horizontal">
	    <Button android:text="@string/login"
           android:id="@+id/login"
           android:background="@drawable/styled_button"
           android:textColor="#000000"
           android:width="70dp"
           android:layout_marginLeft="10dp"/>
        <Button android:text="@string/signup"
           android:id="@+id/signup"
           android:background="@drawable/styled_button"
           android:textColor="#000000"
           android:width="70dp"
           android:layout_marginLeft="10dp"/>
    </TableRow>
</TableLayout>
